Fix: hamburger menu wasn't showing on mobile home/blog.
Reason: default invisibility of hamburger menu for home/blog needs to be translated off-screen, not `display: none`

--- a/_sass/notion/_layout.scss
+++ b/_sass/notion/_layout.scss
@@ -384,7 +384,7 @@ h1.blog-excerpt-title, h1.post-title {
 }
 
 .sidebar.home, .sidebar.blog {
-  display: none;
+  transform: translateX(-100%);
 }
 
 .sidebar {
